changed div to span and removed the class on the line parent span to fix spacing in the comment, lines are all perfect

--- a/jsx_refactor/client/automation-finder/src/components/ActionCards/style.css
+++ b/jsx_refactor/client/automation-finder/src/components/ActionCards/style.css
@@ -40,11 +40,6 @@
     color: white;
 }
 
-.inline {
-    display: flex;
-    flex-direction: row;
-}
-
 .bold {
     font-weight: bold;
 }
